--- a/src/App.css
+++ b/src/App.css
@@ -5,25 +5,44 @@
   
 }
 body{
-  background-color: bisque;
+  background-color: #111;
+  color: antiquewhite;
 }
 .title{
   font-size: 50px;
 }
 
 img{
-  width: 300px;
-  height: 200px;
- 
+  width: 250px;
+  height: 150px;
   padding-right: 30px;
+}
+.cardContainer{
+  width: 90%;
+  margin: auto;
+}
+.cardPoster{
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  margin: auto;
 }
 
 .card{
-  display: flex;
-  justify-content: space-evenly;
-  flex-wrap: wrap;
   padding: 10px;
-  margin: auto;
+  cursor: pointer;
+  outline: none;
+  transition: transform 450ms;
   
+}
+.card:hover{
+  transform: scale(1.08);
+}
+
+input{
+  width: 300px;
+  height: 30px;
+  font-size: 25px;
+  margin-bottom: 50px;
 }
 
