added search bar and filter functionality

--- a/src/App.css
+++ b/src/App.css
@@ -8,8 +8,25 @@ body{
   background-color: #111;
   color: antiquewhite;
 }
+.title_container{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-right: 20px;
+}
 .title{
-  font-size: 50px;
+  
+  width: 57%;
+  text-align: end;
+  
+  font-size: 60px;
+  font-weight: 400;
+  
+}
+
+button{
+  height: 40px;
+  border-radius: 50px;
 }
 
 img{
@@ -44,5 +61,10 @@ input{
   height: 30px;
   font-size: 25px;
   margin-bottom: 50px;
+  outline: none;
+}
+.loader{
+  text-align: center;
+  font-size: 60px;
 }
 
