--- a/src/App.css
+++ b/src/App.css
@@ -12,21 +12,15 @@ body{
 }
 .title_container{
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
+ 
   padding-right: 20px;
 }
 .title{
-  
-  width: 57%;
-  text-align: end;
-  
   font-size: 60px;
-  font-weight: 400;
-  
+  font-weight: 400; 
 }
-
-
 
 img{
   width: 250px;
@@ -59,7 +53,7 @@ input{
   width: 300px;
   height: 30px;
   font-size: 25px;
-  margin-bottom: 50px;
+  
   outline: none;
 }
 .loader{
@@ -85,4 +79,8 @@ button{
   
   background-color: #111;
   color: yellow;
+}
+.backBtn{
+  background-color: royalblue;
+
 }
